# bazel-rules-libcurl

./: BUILD.bazel  README.md
bazel/: deps.bzl  repos.bzl
