load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "libcurl",
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "BUILD_TESTING": "OFF",
        "BUILD_SHARED_LIBS": "OFF",
        "CURL_STATIC_CRT": "ON",
    },
    lib_source = ":all",
    linkopts = select({
        "@bazel_tools//src/conditions:windows": ["/DYNAMICBASE ws2_32.lib wldap32.lib advapi32.lib kernel32.lib comdlg32.lib crypt32.lib normaliz.lib"],  # Windows
        "@bazel_tools//src/conditions:darwin": [],  # macOS
        "//conditions:default": [],  # Linux
    }),
    out_static_libs = select({
        "@bazel_tools//src/conditions:windows": [
            "libcurl.lib",
        ],
        "//conditions:default": ["libcurl_a.a"],
    }),
    visibility = ["//visibility:public"],
)
